fixed some layout issues
git-svn-id: svn://127.0.0.1/flaskdump/trunk@838 386f392f-2c41-1343-9bf7-4b6fedb51b34

--- a/liferay-plugins-sdk-6.2/portlets/flask-email-notification-portlet/docroot/css/.sass-cache/main.css
+++ b/liferay-plugins-sdk-6.2/portlets/flask-email-notification-portlet/docroot/css/.sass-cache/main.css
@@ -1,4 +1,1 @@
-.divHeight {
-  height: 350px;
-  overflow-y: auto; }
 
