--- a/liferay-plugins-sdk-6.2/portlets/flask-email-notification-portlet/docroot/css/main.css
+++ b/liferay-plugins-sdk-6.2/portlets/flask-email-notification-portlet/docroot/css/main.css
@@ -1,4 +1,3 @@
 .divHeight{
-	height: 350px;
-	overflow-y: auto;
+
 }
